UV map lost when linking scene from another file #32082

Closed
opened 2012-07-12 08:55:08 +02:00 by Konstantin Dmitriev (Morevna Project) · 4 comments

%%%I have found that objects having material with FaceTextures option enabled will have no images if they are linked into another file.

Detailed description of the problem:

  1. Create plane object and add some image as UV texture (using "UV/Image Editor" window).
  2. Apply some material to this object and enable "Face Textures" option
  3. Try to render - the image texture is visible on the plane. That is what expected.
  4. Now set the scene name to "Sample" and save current file as "lib.blend".
  5. Create new file and save it as "bug.blend".
  6. Select "File"->"Link", choose lib.blend file, then "Scenes"-> "Sample" (that will link scene "Sample" from file lib.blend)
  7. Go to the "Sample" scene and try to render.
    8 Result - the plane have NO image texture visible.

I have attached sample files to reproduce. Just try to open lib.blend and render. Then try to open bug.blend and render. In second case you will see no image on the plane.

Tested with blender 2.63 & blender 2.64-testbuild1 (x86_64).%%%

%%%I have found that objects having material with FaceTextures option enabled will have no images if they are linked into another file. Detailed description of the problem: 1. Create plane object and add some image as UV texture (using "UV/Image Editor" window). 2. Apply some material to this object and enable "Face Textures" option 3. Try to render - the image texture is visible on the plane. That is what expected. 4. Now set the scene name to "Sample" and save current file as "lib.blend". 5. Create new file and save it as "bug.blend". 6. Select "File"->"Link", choose lib.blend file, then "Scenes"-> "Sample" (that will link scene "Sample" from file lib.blend) 7. Go to the "Sample" scene and try to render. 8 Result - the plane have NO image texture visible. I have attached sample files to reproduce. Just try to open lib.blend and render. Then try to open bug.blend and render. In second case you will see no image on the plane. Tested with blender 2.63 & blender 2.64-testbuild1 (x86_64).%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%My apologies, I have forgot to specify bug category. ^_^"%%%

%%%My apologies, I have forgot to specify bug category. ^_^"%%%

%%%Fixed in svn rev48851. Thanks for the report, closing.%%%

%%%Fixed in svn rev48851. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32082
No description provided.