Fix #32082: face textures lost when linking scene from another file

Issue was caused by missing expand for MTexPoly-s tpages.